@@ -19,6 +19,7 @@ sunuo (0.3.0) unstable; urgency=low
   * MultiConOut is a dummy now that log4net is being used
   * disable console in service mode
   * added Config.Features
+  * Config.MultiThreading renamed to Config.Features["multi-threading"]
   * debian: symlink base/Data to /etc/sunuo
   * debian: symlink base/var/log to /var/log/sunuo
   * debian: install SunUO.exe.config in /etc/sunuo/
